--- a/public/stylesheets/calculator.css
+++ b/public/stylesheets/calculator.css
@@ -21,7 +21,6 @@ div {
     width: 1260px; /* 94% */
     height: 670px; /* 82% */
     padding: 0px;
-    /*z-index: 999;*/
     border-top: 20px solid #333333;
     border-bottom: 40px solid #333333;
     background-color: white;
@@ -45,16 +44,18 @@ table, td, th {
 }
 
 table {
+    table-layout: fixed;
     border-collapse: collapse;
     width: 750px;
-    /*width: 92%;*/
     max-height: 300px;
-    /* height: 100%;*/
-    /*white-space: nowrap*/
+    
 }
 
 th, td {
     padding: 5px;
+}
+td{
+    width: 100px;
 }
 
 p {
@@ -66,7 +67,7 @@ table, td, th, div2, h2, p, h1 {
 }
 
 input {
-    width: 35%; /*30%*/
+    width: 55%; /*30%*/
     padding-left: 1px;
 }
 
@@ -96,8 +97,13 @@ html {
 
 resform {
     position: absolute;
-    bottom: 13px;
+    bottom: 15px;
     left: 22px;
     color: black;
     font-size: 18px;
+}
+.smallspace {
+    display: block; /* makes it have a width */
+    content: ""; /* clears default height */
+    margin-top: 5px; /* change this to whatever height you want it */
 }
