--- a/public/stylesheets/calculator.css
+++ b/public/stylesheets/calculator.css
@@ -103,14 +103,28 @@ clrbutton {
     bottom: 15px;
 }
 
-button {
+#chngb{
+    position: absolute;
+    right: 10px;
+    bottom: 50px;
+    width: 310px;
     background-color: #A3062A;
     border-radius: 3px;
     border: none;
     color: white;
-    width: 90px;
     height: 25px;
 }
+
+#clrb, #meanb, #wb {
+    background-color: #A3062A;
+    border-radius: 3px;
+    border: none;
+    color: white;
+    height: 25px;
+    width: 90px;
+}
+
+
 
 html {
     height: 100%;
